Project

General

Profile

Actions

Bug #23468

closed

radosgw-admin should not use metadata cache when not needed

Added by Orit Wasserman about 6 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
High
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous, jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

This can cause "failed to distribute cache" errors when using it heavily.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #23683: luminous: radosgw-admin should not use metadata cache when not neededResolvedPrashant DActions
Copied to rgw - Backport #23684: jewel: radosgw-admin should not use metadata cache when not neededRejectedActions
Actions #1

Updated by Matt Benjamin about 6 years ago

hmm, that's interesting

Actions #2

Updated by Orit Wasserman about 6 years ago

  • Subject changed from radosgw-admin should not use metadata cache to radosgw-admin should not use metadata cache when not needed
Actions #3

Updated by Casey Bodley about 6 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Casey Bodley about 6 years ago

  • Status changed from Fix Under Review to 7
Actions #5

Updated by Casey Bodley about 6 years ago

  • Status changed from 7 to Pending Backport
Actions #6

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #23683: luminous: radosgw-admin should not use metadata cache when not needed added
Actions #7

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #23684: jewel: radosgw-admin should not use metadata cache when not needed added
Actions #10

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF