rgw: make cache configurable durining init_storage

Fixes: http://tracker.ceph.com/issues/23468
Signed-off-by: Orit Wasserman <owasserm@redhat.com>